# google-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run-server.sh  server.py  setup.py  test_cli.py  test_contacts.py  test_google_formats.py  test_shared_drive.py
docs/: examples.md  setup.md  tools.md  troubleshooting.md
src/google_mcp_server/: __init__.py  auth.py  calendar_client.py  contacts_client.py  drive_client.py  gmail_client.py  integration_client.py  safe_tools.py  server.py  smart_tools.py
src/google_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_auth.py  test_cli.py  test_contacts.py  test_google_formats.py  test_server.py  test_shared_drive.py
